Updated Dark mode label; Fixed nav icon color on dark mode;

--- a/searx/static/themes/etheme/css/etheme.css
+++ b/searx/static/themes/etheme/css/etheme.css
@@ -567,6 +567,7 @@ nav #etheme_links > * {
 }
 .nav_dark-mode {
   padding: 1rem;
+  padding-right: 3rem;
   color: var(--nav-text-color);
 }
 .nav_dark-mode .nav_dark-mode--label {
