--- a/searx/static/themes/etheme/less/etheme/etheme-dark.less
+++ b/searx/static/themes/etheme/less/etheme/etheme-dark.less
@@ -56,4 +56,8 @@
         }
     }
 
+    #nav_toggle_btn {
+        fill: var();
+    }
+
 }
