--- a/searx/static/themes/etheme/less/etheme/navbar.less
+++ b/searx/static/themes/etheme/less/etheme/navbar.less
@@ -75,6 +75,7 @@ nav {
 
 .nav_dark-mode {
   padding: 1rem;
+  padding-right: 3rem;
   color: var(--nav-text-color);
   .nav_dark-mode--label {
     margin-right: 0.5rem;
